Update dashboard admin dan integrasi database

--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
         <div class="fancy-card" style="margin-bottom: 20px;">
             <h4>CURRENT_POSITION</h4>
             <p>Informatics Researcher</p>
-            <p style="font-size: 0.8rem; font-weight: 400; color: #94a3b8; margin-top: 5px;">@ Amikom University Yogyakarta</p>
+            <p style="font-size: 0.8rem; font-weight: 400; color: #94a3b8; margin-top: 5px;">@</p>
         </div>
 
         <div class="fancy-card">
