--- a/about.html
+++ b/about.html
@@ -30,7 +30,6 @@
 
         .container { max-width: 1200px; margin: auto; padding: 0 25px; }
 
-        /* --- NAVIGATION --- */
         nav { 
             padding: 25px 0; 
             display: flex; 
@@ -75,10 +74,8 @@
         }
         .nav-links a:hover { color: var(--p); }
 
-        /* --- LAYOUT --- */
         .wrapper { display: grid; grid-template-columns: 350px 1fr; gap: 50px; padding: 80px 0; }
 
-        /* --- LEFT SIDE: THE PILOT --- */
         .sidebar { position: sticky; top: 120px; height: fit-content; }
         .photo-box { 
             width: 100%; 
@@ -105,14 +102,12 @@
             border: 1px solid rgba(0, 255, 136, 0.2);
         }
 
-        /* --- RIGHT SIDE: DATA TERMINAL --- */
         .data-header { margin-bottom: 60px; }
         .data-header h1 { font-size: 5rem; letter-spacing: -5px; line-height: 0.9; margin-bottom: 20px; }
         .data-header span { background: var(--grad); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
         
         .section-tag { font-family: 'JetBrains Mono'; color: var(--p); font-size: 0.8rem; margin-bottom: 10px; display: block; }
         
-        /* Information Cards */
         .card-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 20px; margin-bottom: 60px; }
         .fancy-card { 
             background: var(--card); 
@@ -125,7 +120,6 @@
         .fancy-card h4 { font-family: 'JetBrains Mono'; font-size: 0.7rem; color: #64748b; margin-bottom: 10px; text-transform: uppercase; }
         .fancy-card p { font-size: 1.1rem; font-weight: 800; }
 
-        /* Hardware Inventory (Biar Rame) */
         .inventory { 
             margin-top: 40px; 
             background: rgba(255,255,255,0.02); 
@@ -137,7 +131,6 @@
         .inventory-item span:first-child { color: #94a3b8; }
         .inventory-item span:last-child { color: #fff; font-weight: bold; }
 
-        /* Experience Timeline */
         .timeline { margin: 60px 0; position: relative; padding-left: 40px; }
         .timeline::before { content: ''; position: absolute; left: 0; top: 0; width: 2px; height: 100%; background: var(--border); }
         .event { position: relative; margin-bottom: 50px; }
@@ -146,14 +139,14 @@
         .event span { font-family: 'JetBrains Mono'; color: var(--p); font-size: 0.8rem; }
         .event p { color: #94a3b8; margin-top: 10px; max-width: 600px; }
 
-        /* Software Table */
         table { width: 100%; border-collapse: collapse; margin-top: 30px; }
         th { text-align: left; padding: 15px; font-family: 'JetBrains Mono'; font-size: 0.8rem; color: #64748b; border-bottom: 2px solid var(--border); }
         td { padding: 20px 15px; border-bottom: 1px solid var(--border); }
         .progress-bg { width: 100%; background: #1e293b; height: 6px; border-radius: 10px; overflow: hidden; margin-top: 10px; }
         .progress-fill { background: var(--p); height: 100%; box-shadow: 0 0 10px var(--p); }
 
-        footer { padding: 80px 0; text-align: center; border-top: 1px solid var(--border); opacity: 0.4; font-family: 'JetBrains Mono'; font-size: 0.8rem; }
+        /* FOOTER SESUAI GAMBAR HOSTING */
+        footer { padding: 60px 0; border-top: 1px solid rgba(0,255,136,0.1); margin-top: 100px; }
 
         @media (max-width: 900px) {
             .wrapper { grid-template-columns: 1fr; }
@@ -209,6 +202,11 @@
 
         <span class="section-tag">01. TECHNICAL_CAPABILITIES</span>
         <div class="card-grid">
+            <div class="fancy-card">
+                <h4>ARTIFICIAL_INTEL</h4>
+                <p>AI Prompting / LLM Tuning</p>
+                <div class="progress-bg"><div class="progress-fill" style="width: 95%;"></div></div>
+            </div>
             <div class="fancy-card">
                 <h4>GAME_LOGIC</h4>
                 <p>Unity Engine / C#</p>
@@ -303,10 +301,29 @@
     </section>
 </main>
 
-<footer>
-    <div class="container">
-        <p>&copy; 2026 WILDAN_LABS // YOGYAKARTA_CORE_SYSTEMS</p>
-        <p style="margin-top: 10px; font-size: 0.7rem; color: #64748b;">LATENCY: 0.2ms // ENCRYPTION: AES-256</p>
+<footer style="padding: 60px 0; border-top: 1px solid rgba(0,255,136,0.1); margin-top: 100px;">
+    <div class="container" style="display: grid; grid-template-columns: 1.5fr 1fr 1fr; gap: 40px; align-items: start;">
+        <div>
+            <h3 style="font-family: 'JetBrains Mono'; font-weight: 800; color: #fff; margin-bottom: 20px;">WILDAN<span style="color:var(--p)">_LABS</span></h3>
+            <p style="font-size: 0.85rem; color: #64748b; line-height: 1.6; max-width: 320px;">Eksperimen digital yang menggabungkan kecerdasan buatan, optimasi database, dan desain interaktif.</p>
+        </div>
+        <div>
+            <h4 style="font-family: 'JetBrains Mono'; color: var(--p); font-size: 0.8rem; margin-bottom: 15px;">// SYSTEM_DIAGNOSTICS</h4>
+            <ul style="list-style: none; font-family: 'JetBrains Mono'; font-size: 0.75rem; color: #94a3b8;">
+                <li style="margin-bottom: 8px;"><span style="color:var(--p)">●</span> ENGINE: v1.0.5_STABLE</li>
+                <li style="margin-bottom: 8px;"><span style="color:var(--p)">●</span> NODE: ID_WildanBaldi</li>
+                <li><span style="color:var(--p)">●</span> LATENCY: 24ms</li>
+            </ul>
+        </div>
+        <div style="text-align: right;">
+            <div style="display: flex; justify-content: flex-end; gap: 20px; margin-bottom: 25px; font-size: 1.2rem; color: #94a3b8;">
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+            </div>
+            <p style="color: #fff; font-weight: 800; font-size: 0.85rem;">© 2026 WILDAN BALDI.</p>
+            <p style="color: var(--p); font-family: 'JetBrains Mono'; font-size: 0.7rem;">ALL RIGHTS RESERVED.</p>
+        </div>
     </div>
 </footer>
 
