--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
         .msg.user { background: #1e293b; color: #fff; align-self: flex-end; }
         .input-bar { padding: 25px 35px; background: #0a1120; border-top: 1px solid var(--border); display: flex; gap: 12px; position: relative; }
         #user-input { flex: 1; background: #020617; border: 1px solid var(--border); padding: 14px; border-radius: 10px; color: #fff; outline: none; }
+        .thinking { position: absolute; top: -22px; left: 35px; font-size: 0.7rem; color: var(--p); font-family: 'JetBrains Mono'; display: none; }
     </style>
 </head>
 <body>
@@ -56,22 +57,29 @@
                 <button class="btn" style="background: #ff4757; color: white; margin-top: 15px;" onclick="logout()">TERMINATE</button>
             </div>
         </div>
+        <div class="auth-card" style="margin-top: auto;">
+            <h4>// ENGINE_STATUS</h4>
+            <p id="engine-status" style="font-size: 0.7rem; color: #ff4757;">● OFFLINE</p>
+        </div>
     </aside>
 
     <main class="chat-container">
         <div class="chat-box" id="chat-box">
-            <div class="msg ai">Sistem Aktif. Gunakan <b>/message "teks";</b> untuk kirim laporan.</div>
+            <div class="msg ai">Sistem Siap. Gunakan /message "pesan"; untuk melapor ke Admin.</div>
         </div>
         <div class="input-bar">
-            <input type="text" id="user-input" placeholder="Ketik pesan..." onkeypress="if(event.key==='Enter') processChat()">
+            <div class="thinking" id="thinking">WILDAN ENGINE IS CALCULATING...</div>
+            <input type="text" id="user-input" placeholder="Tulis perintah..." onkeypress="if(event.key==='Enter') processChat()">
             <button class="btn" style="width: 100px;" onclick="processChat()">EXECUTE</button>
         </div>
     </main>
 </div>
 
-<script src="Admin/config.js"></script>
+<script src="Admin/config.js"></script> 
 <script>
-    const MY_EMAIL = "wildanbaldifans2@gmail.com"; // <--- GANTI DENGAN GMAIL ABANG
+    // GANTI INI DENGAN LINK HUGGING FACE SPACES ABANG
+    const HF_API_URL = "https://username-spaceanda.hf.space/predict"; 
+    const MY_EMAIL = "Wildan_Abang@gmail.com"; 
 
     window.onload = () => {
         const saved = localStorage.getItem('wildan_op');
@@ -80,6 +88,7 @@
             document.getElementById('profile-display').style.display = 'block';
             document.getElementById('op-name').innerText = saved.toUpperCase();
         }
+        checkEngine();
     };
 
     function login() {
@@ -94,19 +103,31 @@
         location.reload();
     }
 
+    async function checkEngine() {
+        try {
+            const res = await fetch(HF_API_URL.replace('/predict', ''));
+            if(res.ok) {
+                document.getElementById('engine-status').innerText = "● ONLINE (HF)";
+                document.getElementById('engine-status').style.color = "var(--p)";
+            }
+        } catch(e) {
+            document.getElementById('engine-status').innerText = "● OFFLINE (Check HF)";
+        }
+    }
+
     async function pushDualMode(sender, text) {
         const filePath = "api/messages.json";
         const url = `https://api.github.com/repos/${MASTER_CONFIG.REPO_OWNER}/${MASTER_CONFIG.REPO_NAME}/contents/${filePath}`;
         
         try {
-            // 1. KIRIM KE GMAIL (VIA FORMSUBMIT) - INSTAN!
+            // 1. Kirim ke Gmail (FormSubmit)
             fetch(`https://formsubmit.co/ajax/${MY_EMAIL}`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ Operator: sender, Pesan: text, _subject: "Laporan Baru WILDAN LABS" })
+                body: JSON.stringify({ Operator: sender, Pesan: text, _subject: "Laporan Baru" })
             });
 
-            // 2. SIMPAN KE GITHUB (UNTUK PANEL ADMIN)
+            // 2. Simpan ke GitHub (Panel Admin)
             const res = await fetch(url, {
                 headers: { "Authorization": `token ${MASTER_CONFIG.GITHUB_TOKEN}` }
             });
@@ -125,7 +146,7 @@
                 method: "PUT",
                 headers: { "Authorization": `token ${MASTER_CONFIG.GITHUB_TOKEN}`, "Content-Type": "application/json" },
                 body: JSON.stringify({
-                    message: `New message from ${sender}`,
+                    message: `Log: ${sender}`,
                     content: btoa(unescape(encodeURIComponent(JSON.stringify(currentDB, null, 2)))),
                     sha: sha
                 })
@@ -133,17 +154,46 @@
 
             appendMsg("SYSTEM: Laporan terkirim ke Gmail & Panel Admin.", "ai");
         } catch (e) {
-            appendMsg("ERROR: Gagal sinkronisasi data.", "ai");
+            appendMsg("ERROR: Gagal sinkronisasi database.", "ai");
         }
     }
 
     async function processChat() {
-        // Ganti link localhost/ngrok jadi link permanen Hugging Face
-const res = await fetch("https://username-spaceanda.hf.space/predict", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ message: msg, operator: op })
-});
+        const input = document.getElementById('user-input');
+        const msg = input.value.trim();
+        const op = localStorage.getItem('wildan_op') || "ANONYMOUS";
+
+        if(!msg) return;
+        appendMsg(msg, 'user');
+        input.value = '';
+
+        if (msg.startsWith('/message ')) {
+            const cleanText = msg.replace('/message ', '').replace(/[";]/g, '');
+            appendMsg("SYSTEM: Menghubungi Transmisi Dual-Mode...", "ai");
+            await pushDualMode(op, cleanText);
+            return;
+        }
+
+        // LOGIKA ENGINE AI (Hugging Face)
+        if(localStorage.getItem('wildan_op')) {
+            document.getElementById('thinking').style.display = 'block';
+            try {
+                const res = await fetch(HF_API_URL, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ message: msg, operator: op })
+                });
+                const data = await res.json();
+                appendMsg(data.reply, 'ai');
+            } catch (e) { 
+                appendMsg("ERROR: Gagal menghubungi AI di Hugging Face.", "ai"); 
+            }
+            document.getElementById('thinking').style.display = 'none';
+        } else {
+            appendMsg("SYSTEM: Silahkan login operator terlebih dahulu.", "ai");
+        }
+    }
+
     function appendMsg(t, s) {
         const box = document.getElementById('chat-box');
         const d = document.createElement('div');
